[metadata]
name = UnequalPy
author = SkyPy Team
author_email = lfonseca.ph@gmail.com
description = A package for unequal-time power spectrum.
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD 3-Clause
license_file = LICENSE.rst
edit_on_github = True
github_project = Lucia-Fonseca/unequalpy

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires =
    astropy
    corfu
    numpy
    scipy
